--- a/04_SpaceX_EDA_SQL.ipynb
+++ b/04_SpaceX_EDA_SQL.ipynb
@@ -66,11 +66,11 @@
      "text": [
       "Collecting sqlalchemy==1.3.9\n",
       "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m124.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m101.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "  Preparing metadata (setup.py) ... \u001b[?25done\n",
       "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
       "  Building wheel for sqlalchemy (setup.py) ...done\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp312-cp312-linux_x86_64.whl size=1160111 sha256=c1fde6ffb23d26c49380e499f0f51ac50168a0b941c49a6af16a7a7ea7b524df\n",
+      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp312-cp312-linux_x86_64.whl size=1160111 sha256=a1e884014ad91d67e9226bf574bba8902a81835a1ddf477596474f189e42bdb2\n",
       "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/b3/1c/42/0e26b8d512adc6bce10ff71a05229366b4ccec641cd3b42111\n",
       "Successfully built sqlalchemy\n",
       "Installing collected packages: sqlalchemy\n",
@@ -135,7 +135,7 @@
       "Requirement already satisfied: pure_eval in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (0.2.3)\n",
       "Downloading ipython_sql-0.5.0-py3-none-any.whl (20 kB)\n",
       "Downloading sqlalchemy-2.0.41-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m94.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m82.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hDownloading prettytable-3.16.0-py3-none-any.whl (33 kB)\n",
       "Downloading sqlparse-0.5.3-py3-none-any.whl (44 kB)\n",
       "Installing collected packages: sqlparse, sqlalchemy, prettytable, ipython-sql\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -332,14 +332,45 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "(sqlite3.OperationalError) near \"UNIQUE\": syntax error\n",
-      "[SQL: SELECT UNIQUE(LAUNCH_SITE) FROM SPACEXTBL;]\n",
-      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Launch_Sites</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>CCAFS LC-40</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>VAFB SLC-4E</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>KSC LC-39A</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>CCAFS SLC-40</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT UNIQUE(LAUNCH_SITE) FROM SPACEXTBL;"
+    "%sql SELECT DISTINCT LAUNCH_SITE as \"Launch_Sites\" FROM SPACEXTBL;"
    ]
   },
   {
@@ -355,8 +386,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -456,15 +489,13 @@
        " ('2013-03-01', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT * \\\n",
-    "    FROM SPACEXTBL \\\n",
-    "    WHERE LAUNCH_SITE LIKE'CCA%' LIMIT 5;"
+    "%sql SELECT * FROM SPACEXTBL WHERE LAUNCH_SITE LIKE'CCA%' LIMIT 5;"
    ]
   },
   {
@@ -537,10 +568,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>AVG(PAYLOAD_MASS__KG_)</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2928.4</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2928.4,)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT AVG(PAYLOAD_MASS__KG_) \\\n",
+    "    FROM SPACEXTBL \\\n",
+    "    WHERE BOOSTER_VERSION = 'F9 v1.1';"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -556,10 +624,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>MIN(DATE)</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2015-12-22</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('2015-12-22',)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT MIN(DATE) FROM SPACEXTBL WHERE Landing_Outcome = 'Success (ground pad)';"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -572,10 +675,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Booster_Version</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>F9 FT B1022</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT B1026</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT  B1021.2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 FT  B1031.2</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('F9 FT B1022',), ('F9 FT B1026',), ('F9 FT  B1021.2',), ('F9 FT  B1031.2',)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT Booster_Version FROM SPACEXTBL WHERE Landing_Outcome = 'Success (drone ship)' AND PAYLOAD_MASS__KG_ BETWEEN 4000 AND 6000;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -591,10 +738,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Mission_Outcome</th>\n",
+       "            <th>total_number</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Failure (in flight)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success</td>\n",
+       "            <td>98</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success </td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success (payload status unclear)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Failure (in flight)', 1),\n",
+       " ('Success', 98),\n",
+       " ('Success ', 1),\n",
+       " ('Success (payload status unclear)', 1)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT MISSION_OUTCOME, COUNT(*) as total_number \\\n",
+    "FROM SPACEXTBL \\\n",
+    "GROUP BY MISSION_OUTCOME;"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -609,10 +810,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Booster_Version</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1048.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1056.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1048.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.2 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1058.3 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1051.6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1060.3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>F9 B5 B1049.7 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('F9 B5 B1048.4',),\n",
+       " ('F9 B5 B1049.4',),\n",
+       " ('F9 B5 B1051.3',),\n",
+       " ('F9 B5 B1056.4',),\n",
+       " ('F9 B5 B1048.5',),\n",
+       " ('F9 B5 B1051.4',),\n",
+       " ('F9 B5 B1049.5',),\n",
+       " ('F9 B5 B1060.2 ',),\n",
+       " ('F9 B5 B1058.3 ',),\n",
+       " ('F9 B5 B1051.6',),\n",
+       " ('F9 B5 B1060.3',),\n",
+       " ('F9 B5 B1049.7 ',)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT BOOSTER_VERSION \\\n",
+    "FROM SPACEXTBL \\\n",
+    "WHERE PAYLOAD_MASS__KG_ = (SELECT MAX(PAYLOAD_MASS__KG_) FROM SPACEXTBL);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -628,10 +910,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>month</th>\n",
+       "            <th>Date</th>\n",
+       "            <th>Booster_Version</th>\n",
+       "            <th>Launch_Site</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT substr(Date,4,2) as month, DATE,Booster_Version, Launch_Site \\\n",
+    "FROM SPACEXTBL \\\n",
+    "where [Landing_Outcome] = 'Failure (drone ship)' and substr(Date,7,4)='2015';"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -647,10 +966,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Landing_Outcome</th>\n",
+       "            <th>count_outcomes</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>10</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success (drone ship)</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Success (ground pad)</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Controlled (ocean)</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Uncontrolled (ocean)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Failure (parachute)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Precluded (drone ship)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('No attempt', 10),\n",
+       " ('Success (drone ship)', 5),\n",
+       " ('Failure (drone ship)', 5),\n",
+       " ('Success (ground pad)', 3),\n",
+       " ('Controlled (ocean)', 3),\n",
+       " ('Uncontrolled (ocean)', 2),\n",
+       " ('Failure (parachute)', 2),\n",
+       " ('Precluded (drone ship)', 1)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%sql SELECT Landing_Outcome, count(*) as count_outcomes \\\n",
+    "FROM SPACEXTBL \\\n",
+    "WHERE DATE between '2010-06-04' and '2017-03-20' group by Landing_Outcome order by count_outcomes DESC;"
+   ]
   },
   {
    "cell_type": "markdown",
